@@ -1,3 +1,9 @@
+2019-09-10  Christophe Lyon  <christophe.lyon@st.com>
+	Mickaël Guêné <mickael.guene@st.com>
+
+	* libsupc++/eh_personality.cc (get_ttype_entry): Add FDPIC
+	support.
+
 2019-09-10  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/91711
